--- a/edicao.css
+++ b/edicao.css
@@ -4,7 +4,7 @@
 }
 body{
     font-family: Arial, sans-serif;
-    background-color: rgb(159, 255, 223);
+    background-image: url(/10228997.jpg);
     margin: 0;
     padding: 0;
 }
@@ -57,4 +57,3 @@ header{
 footer{
     text-align: center;
 }
-    
